library/pod-security-policy/selinux/samples/psp-selinux-v2/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: selinux
tests:
- name: require-matching-selinux-options
  template: template.yaml
  constraint: samples/psp-selinux-v2/constraint.yaml
